assets/styles/index.scss
@import '~bootstrap/scss/bootstrap';

@font-face {
  font-family: 'Niramit';
  src: url('public/Niramit/Niramit-ExtraLight.ttf') format('truetype');
}

@font-face {
  font-family: 'Tenali Ramakrishna';
  src: url('public/Tenali_Ramakrishna/TenaliRamakrishna-Regular.ttf') format('truetype');
}

html,
body {
  height: 100%;
  background-color: #242e3f;
  background-image: url("https://www.transparenttextures.com/patterns/arches.png");
}

h1 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('public/johannes-plenio-DKix6Un55mw-unsplash.jpg');
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  color: white;
  font-family: 'Tenali Ramakrishna';
  padding: 60px 10px 60px 10px;
  font-size: 55px;
}

.btn-dark {
  button-color: white;
  button-background-color: #383838;
}

.page-content {
  flex: 1 0 auto;
}

main {
  flex-direction: row-reverse;
  font-family: 'Niramit';
}

.box {
  background-color: #645548;
  border-radius: 4px;
}

.box .box {
  background-color: purple;
}

.intro {
  color: #628aa4;
}

.user-actions {
  border-radius: 4px;
  color: #a88868;
  background-color: #43403d;
  margin-left: 25px;
  margin-top: 15px;
  margin-bottom: 25px;
}

.sticky-footer {
  flex-shrink: none;
  font-family: 'Niramit';
}

@media (min-width: 480px) {
  body {
    background-color: #242e3f;
  }
  h1 {
    font-size: 60px;
    padding: 80px 20px 80px 20px;
  }
  .user-actions {
    margin-left: 0;
  }
}
@media (min-width: 768px) {
  body {
    background-color: #242e3f;
  }
  h1 {
    padding: 120px 80px 120px 40px;
    font-size: 90px;
  }
}
@media (min-width: 992px) {
  body {
    background-color: #242e3f;
  }
  h1 {
    padding: 150px 80px 150px 30px;
  }
}
@media (min-width: 1200px) {
  body {
    background-color: #242e3f;
  }
  h1 {
    padding: 180px 80px 180px 40px;
  }
  .box {
    background-color: #645548;
    border-radius: 2px;
    padding-left: 20px;
    margin-top: 5px;
    margin-bottom: 5px;
  }
}

